# DCDC_Analyzer

./: CMakeLists.txt  README.md  app_info.rc  resource.qrc  resource.rc
src/: main.cpp
src/core/: BoostConverter.cpp  BoostConverter.h  BuckConverter.cpp  BuckConverter.h  ConverterBase.cpp  ConverterBase.h
src/models/: AnalysisResult.cpp  AnalysisResult.h  PowerStageParams.cpp  PowerStageParams.h
src/ui/: MainWindow.cpp  MainWindow.h
src/utils/: MathUtils.cpp  MathUtils.h
